--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang="en">
 
 <head>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +9,9 @@
     <meta name="author" content="larsSchuermann">
     <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css" />
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+    </style>
 
     <title>Coding Bootcamps Europe</title>
 </head>
@@ -20,56 +20,58 @@
     <main class="main-main">
         <header class="main-header">
             <div class="logo-header">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div class="element-logo-header"></div>
+                <div class="element-logo-header"></div>
+                <div class="element-logo-header"></div>
             </div>
-            <h1>Coding Bootcamps Europe</h1>
+            <h1 class="heading-header">Coding Bootcamps Europe</h1>
         </header>
         <section class="interface-section">
             <h2>Students</h2>
             <p>Your fellow students</p>
             <div>
-                <div>
-                    <form action="" class="">
-                        <label for=""></label>
+                <div class="interface-search">
+                    <form action="" class="searchbar">
+                        <label for="searchbar"></label>
                         <input type="search" id="" name="">
                     </form>
-                    <i class="bi bi-search"></i>
+                    <p class="placeholder">Search for students names</p>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-search" viewBox="0 0 16 16">
                         <path
                             d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                     </svg>
                 </div>
-                <div>
-                    <div>
-                        <select name="classes" id="classes-select">
-                            <option value="november-class-2022">November Class 2022</option>
-                            <option value="october-class-2022">October Class 2022</option>
-                            <option value="september-class-2022">September Class 2022</option>
-                        </select>
-                        <div class="ddm-icon-1">
-                            <i class="bi bi-search"></i>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-caret-down-fill" viewBox="0 0 16 16">
-                                <path
-                                    d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
-                            </svg>
+                <div class="interface-dropdown">
+                    <div class="dropdown-classes">
+                        <div class="dd-style">
+                            <select name="classes" id="classes-select">
+                                <option value="november-class-2022">November Class 2022</option>
+                                <option value="october-class-2022">October Class 2022</option>
+                                <option value="september-class-2022">September Class 2022</option>
+                            </select>
+                            <div class="icon-wrapper">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                                </svg>
+                            </div>
                         </div>
                     </div>
-                    <div>
-                        <select name="time-model" id="time-model">
-                            <option value="full-time">Full-Time</option>
-                            <option value="part-time">Part-Time</option>
-                        </select>
-                        <div class="ddm-icon-2">
-                            <i class="bi bi-search"></i>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-caret-down-fill" viewBox="0 0 16 16">
-                                <path
-                                    d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
-                            </svg>
+                    <div class="dropdown-time-model">
+                        <div class="dd-style">
+                            <select name="time-model" id="time-model">
+                                <option value="full-time">Full-Time</option>
+                                <option value="part-time">Part-Time</option>
+                            </select>
+                            <div class="icon-wrapper">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                                </svg>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -77,65 +79,55 @@
         </section>
         <section class="info-section">
             <h3>Full-Time November Class of 2021</h3>
-            <div id="Dmitry">
-                <div>
-                    <i class="bi bi-search"></i>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-person" viewBox="0 0 16 16">
+            <div id="dimitry">
+                <div class="member-logo-bg">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#fbfbfb" class="member-logo"
+                        viewBox="0 0 15 15">
                         <path
                             d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z" />
                     </svg>
                 </div>
-                <p>Dimitry Kolesnikov</p>
-                <a href="">github.com/Dimi87</a>
+                <p>Dimitry Kolesnikov<br><a href="">github.com/Dimi87</a></p>
             </div>
-            <div id="Justus">
-                <div>
-                    <i class="bi bi-search"></i>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-person" viewBox="0 0 16 16">
+            <div id="justus">
+                <div class="member-logo-bg">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#fbfbfb" class="member-logo"
+                        viewBox="0 0 15 15">
                         <path
                             d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z" />
                     </svg>
                 </div>
-                <p>Justus Siebert</p>
-                <a href="">github.com/justussiebert</a>
+                <p>Justus Siebert<br><a href="">github.com/justussiebert</a></p>
             </div>
-            <div id="Manuel">
-                <div>
-                    <i class="bi bi-search"></i>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-person" viewBox="0 0 16 16">
+            <div id="manuel">
+                <div class="member-logo-bg">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#fbfbfb" class="member-logo"
+                        viewBox="0 0 15 15">
                         <path
                             d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z" />
                     </svg>
                 </div>
-                <p>Manuel Hohenadl</p>
-                <a href="">github.com/Manoo89</a>
+                <p>Manuel Hohenadl<br><a href="">github.com/Manoo89</a></p>
             </div>
-            <div id="Ovidiu">
-                <div>
-                    <i class="bi bi-search"></i>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-person" viewBox="0 0 16 16">
+            <div id="ovidiu">
+                <div class="member-logo-bg">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#fbfbfb" class="member-logo"
+                        viewBox="0 0 15 15">
                         <path
                             d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z" />
                     </svg>
                 </div>
-                <p>Ovidiu Goanta</p>
-                <a href="">github.com/Goanta-Ovidiu</a>
+                <p>Ovidiu Goanta<br><a href="">github.com/Goanta-Ovidiu</a></p>
             </div>
-            <div id="Patricia">
-                <div>
-                    <i class="bi bi-search"></i>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-person" viewBox="0 0 16 16">
+            <div id="patricia">
+                <div class="member-logo-bg">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#fbfbfb" class="member-logo"
+                        viewBox="0 0 15 15">
                         <path
                             d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z" />
                     </svg>
                 </div>
-                <p>Patricia Prager</p>
-                <a href="">github.com/patprager</a>
+                <p>Patricia Prager<br><a href="">github.com/patprager</a></p>
             </div>
         </section>
     </main>
