--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div>
                 <div class="interface-search">
-                    <form action="" class="searchbar">
+                    <form action="search" class="searchbar">
                         <label for="searchbar"></label>
                         <input type="search" id="search" name="searchbar" placeholder="Search for students names">
                     </form>
