--- a/index.html
+++ b/index.html
@@ -31,50 +31,48 @@
                 <h2>Students</h2>
                 <p>Your fellow students</p>
             </div>
-            <div>
-                <div class="interface-search">
-                    <form action="search" class="searchbar">
-                        <label for="searchbar"></label>
-                        <input type="search" id="search" name="searchbar" placeholder="Search for students names">
-                    </form>
-                    <div class="searchbar-logo">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-search" viewBox="0 0 16 16">
-                            <path
-                                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-                        </svg>
-                    </div>
+            <div class="interface-search">
+                <form action="search" class="searchbar">
+                    <label for="searchbar"></label>
+                    <input type="search" id="search" name="searchbar" placeholder="Search for students names">
+                </form>
+                <div class="searchbar-logo">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-search" viewBox="0 0 16 16">
+                        <path
+                            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                    </svg>
                 </div>
-                <div class="interface-dropdown">
-                    <div class="dropdown-classes">
-                        <div class="dd-style">
-                            <select name="classes" id="classes-select">
-                                <option value="november-class-2022">NovemberClass2022</option>
-                                <option value="october-class-2022">OctoberClass2022</option>
-                                <option value="september-class-2022">SeptemberClass2022</option>
-                            </select>
-                            <div class="icon-wrapper">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-caret-down-fill" viewBox="0 0 16 16">
-                                    <path
-                                        d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
-                                </svg>
-                            </div>
+            </div>
+            <div class="interface-dropdown">
+                <div class="dropdown-classes">
+                    <div class="dd-style">
+                        <select name="classes" id="classes-select">
+                            <option value="november-class-2022">NovemberClass2022</option>
+                            <option value="october-class-2022">OctoberClass2022</option>
+                            <option value="september-class-2022">SepClass2022</option>
+                        </select>
+                        <div class="icon-wrapper">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                            </svg>
                         </div>
                     </div>
-                    <div class="dropdown-time-model">
-                        <div class="dd-style">
-                            <select name="time-model" id="time-model">
-                                <option value="full-time">Full-Time</option>
-                                <option value="part-time">Part-Time</option>
-                            </select>
-                            <div class="icon-wrapper">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-caret-down-fill" viewBox="0 0 16 16">
-                                    <path
-                                        d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
-                                </svg>
-                            </div>
+                </div>
+                <div class="dropdown-time-model">
+                    <div class="dd-style">
+                        <select name="time-model" id="time-model">
+                            <option value="full-time">Full-Time</option>
+                            <option value="part-time">Part-Time</option>
+                        </select>
+                        <div class="icon-wrapper">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                            </svg>
                         </div>
                     </div>
                 </div>
